correct alignment

--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -6,12 +6,9 @@
         &:after {
             display: none;
         }
-        // &:active ~ #menu-line, &:focus ~ #menu-line {
-        //     height: .4rem;
-        // }
     }
     .page-link.resume {
-        margin-right: 20px;
+        margin-right: 0px;
     }
 }
 
